<resources>

    // Preferences KEYS
    <string name="key_pref_lang" translatable="false">pref_lang</string>

    //Preferences TITLES
    <string name="title_pref_lang">Language</string>

    <string name="app_name">Translate</string>
    <string name="my_name" translatable="false">Rishav Agarwal</string>
    <string name="type_input">Type or paste some text</string>
    <string name="share">Share app</string>
    <string name="rate">Rate 5 stars</string>
    <string name="more_apps">More Apps</string>
    <string name="about">About</string>
    <string name="download_pro">Download Pro Version (No Ads)</string>
    <string name="translator_by_me">Language Translator Made by RISHAV AGARWAL</string>
    <string name="translate_any_lang">> Translate from any language to any language with just a click!</string>
    <string name="like_follow_facebook">> Like and follow my facebook page: fb.me/AppsByRishavAgarwal</string>
    <string name="mail_at">> Mail at: RishavAgarwal7997@gmail.com</string>
    <string name="website_">> Website: RishavAgarwal7997.wixsite.com/AppsByRishavAgarwal</string>
    <string name="download_pro_about">> Download pro version (No Ads) here: https://play.google.com/store/apps/details?id=com.appsbyrishavagarwal.translate_pro</string>
    <string name="version">version 2.0.1</string>
    <string name="powered_by" translatable="false">Powered by Yandex.Translate</string>
    <string name="ok">OK</string>
    <string name="note_about">*Note: An internet connection is required for this app to function properly! Some features like voice input or output may not work without internet connectivity.</string>
    <string name="internal_error">An internal error occurred! \n Please try again later! \n Inconvenience is regretted!</string>
    <string name="not_supported">Oops! You device doesn\'t support speech-to-text!</string>
    <string name="internet_error">An error occurred! \n Please check your internet connection or try again later.</string>
    <string name="too_big">Sorry, the text is too big to be translated!</string>
    <string name="couldnt_translate">Sorry, the text could not be translated!</string>
    <string name="dir_no_support">Sorry, this translation direction is not supported!</string>
    <string name="error_report">Some internal error occurred! Please try again later.\nPlease report by sending mail, specifying this code:</string>
    <string name="share_string">Hey, check out this awesome Language Translator made by Rishav Agarwal</string>
    <string name="dialog_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_input">Please enter a valid input!</string>
    <string name="copy_no_text">No translated text to be copied!</string>
    <string name="copied">Translation copied</string>
    <string name="couldnt_find_info">Couldn\'t find information!</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="Afrikaans">Afrikaans</string>
    <string name="Albanian">Albanian</string>
    <string name="Amharic">Amharic</string>
    <string name="Arabic">Arabic</string>
    <string name="Armenian">Armenian</string>
    <string name="Azerbaijani">Azerbaijani</string>
    <string name="Bashkir">Bashkir</string>
    <string name="Basque">Basque</string>
    <string name="Belarusian">Belarusian</string>
    <string name="Bengali">Bengali</string>
    <string name="Bosnian">Bosnian</string>
    <string name="Bulgarian">Bulgarian</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="Spanish">Spanish</string>
    <string name="Dutch">Dutch</string>
    <string name="Russian">Russian</string>
    <string name="Turkish">Turkish</string>
    <string name="French">French</string>
    <string name="German">German</string>
    <string name="Greek">Greek</string>
    <string name="Chinese">Chinese</string>
    <string name="Gujarati">Gujarati</string>
    <string name="Italian">Italian</string>
    <string name="Japanese">Japanese</string>
    <string name="Latin">Latin</string>
    <string name="Marathi">Marathi</string>
    <string name="Nepali">Nepali</string>
    <string name="Punjabi">Punjabi</string>
    <string name="Czech">Czech</string>
    <string name="Danish">Danish</string>
    <string name="Finnish">Finnish</string>
    <string name="Hungarian">Hungarian</string>
    <string name="Indonesian">Indonesian</string>
    <string name="Irish">Irish</string>
    <string name="Kannada">Kannada</string>
    <string name="Korean">Korean</string>
    <string name="Malayalam">Malayalam</string>
    <string name="Persian">Persian</string>
    <string name="Polish">Polish</string>
    <string name="Portuguese">Portuguese</string>
    <string name="Romanian">Romanian</string>
    <string name="Swedish">Swedish</string>
    <string name="Tamil">Tamil</string>
    <string name="Telugu">Telugu</string>
    <string name="Thai">Thai</string>
    <string name="Urdu">Urdu</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="Luxembourgish">Luxembourgish</string>
    <string name="Burmese">Burmese</string>
    <string name="Catalan">Catalan</string>
    <string name="Cebuano">Cebuano</string>
    <string name="Croatian">Croatian</string>
    <string name="Esperanto">Esperanto</string>
    <string name="settings">Settings</string>
    <string name="nl" translatable="false">nl</string>
    <string name="hi" translatable="false">hi</string>
    <string name="en" translatable="false">en</string>
    <string name="ru" translatable="false">ru</string>
    <string name="tr" translatable="false">tr</string>
    <string name="es" translatable="false">es</string>
    <string name="Estonian">Estonian</string>
    <string name="Galician">Galician</string>
    <string name="Georgian">Georgian</string>
    <string name="Haitian">Haitian</string>
    <string name="Hebrew">Hebrew</string>
    <string name="Hill_Mari">Hill Mari</string>
    <string name="Icelandic">Icelandic</string>
    <string name="Javanese">Javanese</string>
    <string name="Kazakh">Kazakh</string>
    <string name="Khmer">Khmer</string>
    <string name="Kyrgyz">Kyrgyz</string>
    <string name="Lao">Lao</string>
    <string name="Latvian">Latvian</string>
    <string name="Lithuanian">Lithuanian</string>
    <string name="Yiddish">Yiddish</string>
    <string name="Xhosa">Xhosa</string>
    <string name="Welsh">Welsh</string>
    <string name="Uzbek">Uzbek</string>
    <string name="Ukrainian">Ukrainian</string>
    <string name="Udmurt">Udmurt</string>
    <string name="Tatar">Tatar</string>
    <string name="Tajik">Tajik</string>
    <string name="Tagalog">Tagalog</string>
    <string name="Swahili">Swahili</string>
    <string name="Sundanese">Sundanese</string>
    <string name="Slovenian">Slovenian</string>
    <string name="Slovak">Slovak</string>
    <string name="Sinhala">Sinhala</string>
    <string name="Serbian">Serbian</string>
    <string name="Scottish_Gaelic">Scottish Gaelic</string>
    <string name="Papiamento">Papiamento</string>
    <string name="Norwegian">Norwegian</string>
    <string name="Mongolian">Mongolian</string>
    <string name="Mari">Mari</string>
    <string name="Maori">Maori</string>
    <string name="Maltese">Maltese</string>
    <string name="Malay">Malay</string>
    <string name="Malagasy">Malagasy</string>
    <string name="Macedonian">Macedonian</string>
    <string name="exit">Exit</string>
    <string name="empty_bookmark_message">Bookmarked translations will appear here.</string>
    <string name="empty_history_message">It seems that you haven\'t used this app yet!</string>
    <string name="synced_translations">Synced Translations</string>
    <string name="bookmak_deleted">Bookmark Deleted</string>
    <string name="bookmark_added">Bookmark Added</string>
    <string name="sign_in_cancelled">Sign-in cancelled</string>
    <string name="signed_in">Signed in</string>
    <string name="history">History</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="view_synced_translations">View synced translations</string>

</resources>