<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/translator_by_me"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="clip_horizontal"
                android:text="@string/translate_any_lang"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="start"
                android:linksClickable="true"
                android:text="@string/like_follow_facebook"
                android:textColor="#000000"
                android:textColorLink="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="all"
                android:gravity="start"
                android:linksClickable="true"
                android:text="@string/mail_at"
                android:textColor="#000000"
                android:textColorLink="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="all"
                android:gravity="start"
                android:linksClickable="true"
                android:text="@string/github_link"
                android:textColor="#000000"
                android:textColorLink="@android:color/holo_blue_bright"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/note_about"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="18dp"
        android:layout_weight="0"
        android:gravity="end"
        android:text="@string/version"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_yandex_powered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:gravity="end"
        android:text="@string/powered_by"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="16sp" />
</LinearLayout>